traces/bug_278.txt
examples++-load/bmo.cpp:228: error: DEAD_STORE
  The value written to &fp (type double) is never used.
Showing all 1 steps of the trace


examples++-load/bmo.cpp:228:7: Write of unused value
226.   void BijanMO::tir(Vect &v, Vect &fpx)
227.   {
228.         double fp=funcapp( v, fpx);
             ^
229.         for(int i=0;i<ndim;++i)
230.   	{
